feat: complete REST API  for all major entities + order in the comments
